[gd_scene load_steps=13 format=3 uid="uid://jvj8jpvm1buj"]

[ext_resource type="Script" path="res://Entities/Enemies/basic_enemy_test.gd" id="1_3yiww"]
[ext_resource type="Texture2D" uid="uid://cgjbwbi1na5v7" path="res://Assets/free_skeleton_v002/Sprites/Skeleton.png" id="1_gbisp"]
[ext_resource type="PackedScene" uid="uid://bhqkoupsxoor5" path="res://Assets/Scenes/detectioncone.tscn" id="3_fffja"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7qql4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tiyjh"]
size = Vector2(10, 8)

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hhbyh"]

[sub_resource type="Animation" id="Animation_8y5xq"]
resource_name = "Idle_south"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Detectioncone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_em5vs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Detectioncone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 4)]
}

[sub_resource type="Animation" id="Animation_0pk5s"]
resource_name = "Idle_east"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Detectioncone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_brw5n"]
resource_name = "Idle_north"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Detectioncone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_j4li5"]
resource_name = "Idle_west"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Detectioncone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uaykp"]
_data = {
"Idle_east": SubResource("Animation_0pk5s"),
"Idle_north": SubResource("Animation_brw5n"),
"Idle_south": SubResource("Animation_8y5xq"),
"Idle_west": SubResource("Animation_j4li5"),
"RESET": SubResource("Animation_em5vs")
}

[node name="Basic Enemy" type="CharacterBody2D"]
script = ExtResource("1_3yiww")

[node name="Shadow" type="ColorRect" parent="."]
offset_left = -5.0
offset_top = 6.0
offset_right = 5.0
offset_bottom = 9.0
color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_7qql4")
scale = Vector2(-4, 4)
texture = ExtResource("1_gbisp")
hframes = 4
vframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_tiyjh")

[node name="Detectioncone" parent="." instance=ExtResource("3_fffja")]
rotation = 1.5708

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_hhbyh")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uaykp")
}

[connection signal="area_entered" from="Detectioncone/Detection" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="Detectioncone/Detection" to="." method="_on_detection_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Detectioncone"]
